--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,11 @@
 ; comments
 
-[section1]
+[path]
+path_excel = ./Alliance - 比格沃斯.xlsx
+;files = D:\World of Warcraft\_classic_\WTF\Account\ZHAWLDX\SavedVariables\TradeSkillMaster.lua
+files = E:\World of Warcraft\_classic_\WTF\Account\ZHAWLDX\SavedVariables\TradeSkillMaster.lua
+id_name = ./nameB.txt
 
-path_excel = "./Alliance - 比格沃斯.xlsx"
-
-Analysis_Sheet= "分析"
-
-sprt_word = "csvAuctionDBScan"
-
-files = "D:\World of Warcraft\_classic_\WTF\Account\ZHAWLDX\SavedVariables\TradeSkillMaster.lua"
-
-id_name = "./nameB.txt"
-
-[section2]
-
-Param3= value3
-
-Param4= value4
+[value]
+Analysis_Sheet= 分析
+sprt_word = csvAuctionDBScan
